manifests/production/meta/certmanager/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: certmanager
    app.kubernetes.io/part-of: kube-prometheus
  name: certmanager-allow-kube-prometheus
  namespace: certmanager
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: monitoring-satellite
      podSelector:
        matchLabels:
          app.kubernetes.io/component: prometheus
          app.kubernetes.io/instance: k8s
          app.kubernetes.io/name: prometheus
          app.kubernetes.io/part-of: kube-prometheus
          app.kubernetes.io/version: 2.36.2
  podSelector:
    matchLabels:
      app: cert-manager
      app.kubernetes.io/component: controller
  policyTypes:
  - Ingress
